--- a/about/index.html
+++ b/about/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="http://launcher.github.io/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="http://launcher.github.io/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="http://launcher.github.io/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="http://launcher.github.io/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://zkamisama.github.io/launchercss/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://zkamisama.github.io/launchercss/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://zkamisama.github.io/launchercss/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://zkamisama.github.io/launchercss/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,7 +31,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://launcher.github.io/"><h1>Launcher</h1></a>
+      <a href="https://zkamisama.github.io/launcher"><h1>Launcher</h1></a>
       <p class="lead">
        Launch any app from the Lock Screen 
       </p>
@@ -39,7 +39,7 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="http://launcher.github.io/">Home</a> </li>
+        <li><a href="https://zkamisama.github.io/launcher">Home</a> </li>
         <li><a href="https://www.app-privacy-policy.com/live.php?token=uurqs9JouotcUFjfkNPOrQH2XGCZLbKY"> Privacy Policy </a></li><li><a href="https://www.app-privacy-policy.com/live.php?token=iFzCN30Y0Osb9ffFJSHoNCGkhb1niu3m"> Terms </a></li>
       </ul>
     </nav>
