--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <div class="posts">
   
 
-  <img src="/images/banner.jpg" width="100%" />
+  <img src="/launcher/images/banner.jpg" width="100%" />
   <h1>Launcher</h1>
   <p>Launch any app from the Lock Screen</p>
   <a href="https://apps.apple.com/cn/app/id6443448033">
-    <img src="/images/appstroe.svg" />
+    <img src="/launcher/images/appstroe.svg" />
   </a>
 </div>
     </main>
